# CineVN

./: .gitattributes  .gitignore  LICENSE.md  README.md  cinevn_dirs_template.yaml  evaluate_retrospective.py  inference_mrd.py  preprocess.py  pyproject.toml  requirements.txt  requirements_core.txt  run_CineVN.py  run_inference_mrd.py  run_pics.py  run_preprocessing.py  setup.cfg
bart/: bart.py  wslsupport.py
cinevn/: __init__.py  conversion.py  losses.py  metrics.py  mri.py
cinevn/data/: __init__.py  clustered_sampler.py  mri_data.py  subsample.py  transforms.py  volume_sampler.py
cinevn/models/: __init__.py  conv.py  data_consistency.py  unet.py  varnet.py
cinevn/pl/: __init__.py  callbacks.py  cli.py  data_module.py  utils.py  varnet_module.py
configs/: cine.yaml
data_attributes/: ocmr.csv
evaluation/: evaluate_retrospective.py
helpers/: __init__.py  ndarray.py  utils.py
helpers/datasets/: __init__.py  dataset.py  enums.py  header.py  ismrmrd.py
helpers/mri/: coil_sensitivities.py  fftc.py  pics_impl.py  reconstruct.py  subsampling.py  utils.py
sampling_patterns/dynamic/: __init__.py  cava.py  fully_sampled.py  gro.py  random.py  rounding.py  vista.py
sampling_patterns/static/: __init__.py  equispaced.py  fully_sampled.py  random.py
src/bart/: __init__.py  cfl.py
src/cinevn/: __init__.py  complex_math.py  losses.py  metrics.py  mri.py
src/cinevn_pl/: __init__.py  callbacks.py  cli.py  data_module.py  utils.py  varnet_module.py
src/helpers/: __init__.py  dicom.py  ndarray.py  preprocessing.py  save.py
src/sampling_patterns/: __init__.py
(+37 files in other folders)
