[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CineVN"
version = "0.1.0"
authors = [
    { name = "Marc Vornehm", email = "marc.vornehm@fau.de" }
]
description = "CineVN: Variational network reconstruction for rapid functional cardiac cine MRI"
readme = "README.md"
requires-python = ">=3.10"
